Update 'xn23a1l0e-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:4e74f8b9cccbabcf8f972253bf3a5c54dbe62f1a@sha256:6791de4fc0c69bbea709fe2efcf8b7f1573de95a6c3ec94e16083e9b295c069b

--- a/components/xn23a1l0e-python/overlays/development/deployment-patch.yaml
+++ b/components/xn23a1l0e-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xn23a1l0e-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:4e74f8b9cccbabcf8f972253bf3a5c54dbe62f1a@sha256:6791de4fc0c69bbea709fe2efcf8b7f1573de95a6c3ec94e16083e9b295c069b
+          name: container-image
